# x402-gateway

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  gateway.md  package-lock.json  package.json  pay.sh.md  pyproject.toml  tsconfig.json  x402-gateway.md
.github/workflows/: ci.yml
demo/: upstream_server.py
deploy/: demo-upstream.Dockerfile  mock-facilitator.Dockerfile
docs/: catalog-server-design.md
examples/: README.md  listing.md  provider.yml
providers/acme-weather/: provider.yml
providers/bankofai-llm/: provider.yml
providers/bankofai-site/: provider.yml
providers/defillama-coins-price/: provider.yml
providers/defillama-coins-price-bsc/: provider.yml
providers/defillama-coins-price-bsc-testnet/: provider.yml
providers/defillama-coins-price-tron/: provider.yml
providers/defillama-coins-price-tron-nile/: provider.yml
providers/defillama-tvl/: provider.yml
providers/defillama-tvl-bsc/: provider.yml
providers/defillama-tvl-bsc-testnet/: provider.yml
providers/defillama-tvl-tron/: provider.yml
providers/defillama-tvl-tron-nile/: provider.yml
providers/defillama-yields/: provider.yml
providers/defillama-yields-bsc/: provider.yml
providers/defillama-yields-bsc-testnet/: provider.yml
providers/defillama-yields-tron/: provider.yml
providers/defillama-yields-tron-nile/: provider.yml
providers/dexscreener-dex-data-bsc/: provider.yml
providers/dexscreener-dex-data-bsc-testnet/: provider.yml
providers/dexscreener-dex-data-tron/: provider.yml
providers/dexscreener-dex-data-tron-nile/: provider.yml
providers/dexscreener-search/: provider.yml
providers/dia-price-bsc/: provider.yml
providers/dia-price-bsc-testnet/: provider.yml
src/: catalog.ts  cli.ts  config.ts  index.ts  rate-limit.ts  server.ts  tokens.ts  x402.ts
tests/: __init__.py  cli.test.mjs  conftest.py  gateway.test.mjs  rate-limit.test.mjs
(+86 files in other folders)
